crates/assembly/src/snapshots/miden_assembly__tests__comment_before_program.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 2956
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(push.1, 2)
        pad
        asmOp(push.1, 2)
        incr
        asmOp(push.2, 1)
        push(2)
        asmOp(add, 1)
        add
    end
end
