crates/assembly/src/snapshots/miden_assembly__tests__comment_in_nested_control_blocks.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    join
        join
            basic_block
                push(2147483648)
                push(4294967294)
                mstore
                drop
                pad
                incr
                push(2)
                noop
            end
            if.true
                join
                    basic_block add end
                    if.true
                        loop
                            basic_block push(7) push(11) add noop end
                        end
                    else
                        basic_block noop end
                    end
                end
            else
                join
                    basic_block mul push(8) push(8) noop noop end
                    if.true
                        basic_block mul end
                    else
                        basic_block noop end
                    end
                end
            end
        end
        basic_block push(3) add end
    end
end
