crates/assembly/src/snapshots/miden_assembly__tests__constant_alphanumeric_expression.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 742
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(push.21, 1)
        push(21)
        noop
    end
end
