crates/assembly/src/snapshots/miden_assembly__tests__constant_field_division.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block push(2147483648) push(4294967294) mstore drop push(2) noop end
end
