crates/assembly/src/snapshots/miden_assembly__tests__constant_numeric_expression.snap
---
source: crates/assembly/src/tests.rs
assertion_line: 724
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        asmOp(push.26, 1)
        push(26)
        noop
    end
end
