crates/assembly/src/snapshots/miden_assembly__tests__decorators_basic_block.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    basic_block
        push(2147483648)
        push(4294967294)
        mstore
        drop
        debug(stack.0)
        add
        debug(stack.1)
        mul
        noop
        debug(stack.2)
    end
end
