crates/assembly/src/snapshots/miden_assembly__tests__decorators_dyn-2.snap
---
source: crates/assembly/src/tests.rs
expression: program
---
begin
    join
        basic_block
            push(2147483648)
            push(4294967294)
            mstore
            drop
            noop
            debug(stack.0)
            debug(stack.1)
            debug(stack.2)
            debug(stack.3)
            debug(stack.4)
        end
        dyn
    end
    debug(stack.5) debug(stack.6) debug(stack.7) debug(stack.8) debug(stack.9)
end
